--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ minimal_mistakes_skin: "plum" # "default" "air", "aqua", ...
 
 # Site Settings
 locale: "ko-KR" #"en-US"
-title: "Blog Name Here" # 상단 헤더에 보이는 블로그 명
+title: "ss5jung Devlog" # 상단 헤더에 보이는 블로그 명
 title_separator: "&#124;"
 subtitle: # site tagline that appears below site title in masthead
 name: "your name here" # 블로그 닉네임 설정
 description: "this is my blog!" # 블로그 설명
-url: "https://github-account.github.io" # 블로그 URL
+url: "https://ss5jung.github.io" # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "github-account/github-account.github.io" # GitHub Repo 이름
+repository: "ss0jung/ss5jung.github.io" # GitHub Repo 이름
 teaser: #
 
 # logo                     : # 블로그명 앞에 로고 추가하고 싶을 경우 사용
@@ -99,10 +99,10 @@ analytics:
 # Site Author
 author:
   name: "your name here" # 블로그 닉네임
-  avatar: "/assets/images/meee.png" # 블로그 프로필 사진
+  avatar: "/assets/images/emoji.png" # 블로그 프로필 사진
   #   bio              : "hi all!"
   # location         : "Seoul, Korea"
-  # email            : "youremailhere@xxxxxx.com"
+  # email            : "ss5jung@gmail.com"
 
   links: # 사이트 링크
 #     - label: "Email"
